Update index htmi file

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ ing {
 
 body {
     font-family: 'Roboto', sans-serif;
-    color: #111;
+    color: #434455;
     background-color: #fff;
 }
 /*====== / Common Styles =====*/
@@ -28,7 +28,7 @@ body {
     font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
-line-height: 1.166;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
@@ -43,7 +43,7 @@ font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #2e2f42;
+color: #434455;
 }
 
 .menu-link:hover,
@@ -69,9 +69,14 @@ color: #434455;
 /*====== / Page Heder Styles =====*/
 
 /* =========== Hero Section styles =========== */
+
+.hero {
+    background-color: #2e2f42;
+
+}
 .main-title {
     font-size: 56px;
-    line-height: 1.07143;
+    line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
@@ -84,7 +89,8 @@ color: #434455;
     letter-spacing: 0.04em;
     color: #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-background: #4d5ae5;
+    text-align: center;
+background: #404bbf;
 }
 
 .buy-now-btn:hover,
@@ -94,12 +100,14 @@ font-size: 16px;
 letter-spacing: 0.04em;
 color: #fff;
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-background: #4d5ae5;
+background: #404bbf;
+cursor: pointer;
 }
 /* =========== / Hero Section styles =========== */
 
 /* =========== Benefits Section styles =========== */
 .benefits-list-title {
+    font-weight: 500;
     font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
@@ -115,14 +123,20 @@ color: #434455;
 /* =========== / Benefits Section styles =========== */
 
 /* =========== Employees Section styles =========== */
+.employees {
+    background-color: #F4F4FD;
+}
+
 .section-title {
     font-size: 36px;
-line-height: 1.11111;
+line-height: 1.11;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 text-align: center;
 color: #2e2f42;
+background-color: #FFFFFF;
 }
+
 
 .employees-list-avatar {
     font-size: 18.4px;
@@ -131,6 +145,7 @@ height: 260px;
 }
 
 .employees-list-fullname {
+    font-weight: 500;
     font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
@@ -149,11 +164,15 @@ color: #2e2f42;
 /* =========== / Employees Section styles =========== */
 
 /* =========== Footer styles =========== */
+
+.page-footer  {
+    background-color: #2e2f42;
+}
 .logotype {
     font-family: "Raleway", sans-serif;
 font-weight: 700;
 font-size: 18px;
-line-height: 1.16667;
+line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
