--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,32 @@ color: #2e2f42;
 }
 /* =========== / Employees Section styles =========== */
 
+.menu-hoto-tittel {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11111;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+text-align: center;
+color: #2e2f42;
+}
+
+.menu-list-hoto {
+    font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+
+.menu-list-text {
+    font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #434455;
+}
+
 /* =========== Footer styles =========== */
 
 .page-footer  {
