--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ font-weight: 600;
 font-size: 16px;
 letter-spacing: 0.04em;
 color: #fff;
-background: #404BBF;
+background-color: #404BBF;
 cursor: pointer;
 }
 /* =========== / Hero Section styles =========== */
