Summary styli scc

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,7 @@ color: #434455;
 .buy-now-btn:hover,
 .buy-now-bt:focus {
 font-weight: 600;
-background-color: #404BBF;
+background-color: #404bbf;
 cursor: pointer;
 }
 /* =========== / Hero Section styles =========== */
