--- a/css/styles.css
+++ b/css/styles.css
@@ -84,24 +84,23 @@ color: #434455;
     color: #fff;
 }
 
-.buy-now-btn {
+.buy-btn {
     background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-    text-align: center
+    text-align: center;
+    cursor: pointer;
 }
 
-.buy-now-btn:focus {
+.buy-btn:focus {
 background: #404bbf;
-cursor: pointer;
 }
 
-.buy-now-btn:hover {
+.buy-btn:hover {
 background: #404bbf;
-cursor: pointer;
 }
 /* =========== / Hero Section styles =========== */
 
