--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ background: #404bbf;
     font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
-margin-bottom: 0px;
+margin-bottom: 8px;
 }
 
 .benefits-list-text {
@@ -227,6 +227,7 @@ margin-bottom: 0px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+margin: 0;
 }
 /* =========== / Benefits Section styles =========== */
 
@@ -271,7 +272,7 @@ line-height: 1.2;
 letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
-margin-bottom: 0px;
+margin-bottom: 8px;
 }
 
 .employees-list-text {
@@ -280,6 +281,7 @@ margin-bottom: 0px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
+    margin: 0;
 }
 /* =========== / Employees Section styles =========== */
 
@@ -324,7 +326,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
-margin-bottom: 0px;
+margin-bottom: 8px;
 }
 
 .menu-list-text {
@@ -333,6 +335,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+margin: 0;
 }
 
 /*============= / Hoto Section styles ==================*/
